<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!--
    演示拉伸以填补其他两个视图之间的空间
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 观点1变为顶部 -->
    <TextView
        android:id="@+id/view1"
        android:textSize="30dip"
        android:background="@drawable/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/relative_layout_1_top"/>

    <!-- view2底部 -->
    <TextView
        android:id="@+id/view2"
        android:textSize="30dip"
        android:background="@drawable/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/relative_layout_1_bottom"/>

    <!-- view1和view2共用view3延伸 -->
    <TextView
        android:id="@+id/view3"
        android:textSize="30dip"
        android:background="@drawable/yellow"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_above="@id/view2"
        android:layout_below="@id/view1"
        android:text="@string/relative_layout_1_center"/>

</RelativeLayout>

