<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<!--
    演示了一个水平线性布局与同样大小的列。
一些列迫使他们的身高与父母相匹配。
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:background="@drawable/red"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="20dp"
        android:text="@string/linear_layout_7_small"/>

    <TextView
        android:background="@drawable/green"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/linear_layout_7_big"
        android:textSize="20dp"/>

    <TextView
        android:background="@drawable/blue"
        android:layout_width="0dip"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/linear_layout_7_small"
        android:textSize="20dp"/>

    <TextView
        android:background="@drawable/yellow"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/linear_layout_7_wrap"
        android:textSize="20dp"/>

</LinearLayout>
